# flet_l10n

./: .gitignore  LICENSE  MANIFEST.in  README.md  l10n.yaml  l10n_keys.py  pyproject.toml
examples/: basic_example.py  demo_autocomplete.py  provider_example.py  provider_rebuild_example.py  typed_keys_example.py
locales/: app_en.arb  app_es.arb  app_fr.arb
src/flet_l10n/: __init__.py  arb_parser.py  cli.py  config.py  exceptions.py  formatters.py  generator.py  hot_reload.py  locale_manager.py  localizations.py  plural_rules.py  providers.py  translation_loader.py
tests/: conftest.py  test_basic.py  test_typed_keys.py
