[project]
name = "flet-l10n"
version = "0.1.3"
description = "Localization support for Flet applications using Flutter's ARB format"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Victoire Kitenge", email = "yumakitenge2@gmail.com",
      url = "https://victoirekitenge.vercel.app/" },
]
keywords = ["flet", "localization", "l10n", "i18n", "arb", "translation", "flutter", "internationalization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Localization",
    "Topic :: Software Development :: Internationalization",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Victoire243/flet_l10n"
Documentation = "https://github.com/Victoire243/flet_l10n#readme"
Repository = "https://github.com/Victoire243/flet_l10n"
Issues = "https://github.com/Victoire243/flet_l10n/issues"

[project.optional-dependencies]
icu = [
    "PyICU>=2.12",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "flet>=0.80.0",
]

[project.scripts]
flet-l10n = "flet_l10n.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flet_l10n"]